[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hands-on-notebooks"
version = "0.1.0"
description = "University class hands-on notebooks"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "ipykernel>=6.29.5",
  "ipympl>=0.9.7",
  "ipywidgets>=8.1.7",
  "jftools>=0.4.2",
  "jupyterlab>=4.3.7",
  "jupyterlab-execute-time>=3.2.0",
  "laserfields>=0.4.1",
  "matplotlib>=3.7.5",
  "notebook>=7.3.3",
  "numba>=0.61.2",
  "numericalunits>=1.26",
  "numpy>=1.24.4",
  "python-lsp-server[all]>=1.7.4",
  "pyyaml>=6",
  "scipy>=1.14",
]

[tool.setuptools]
py-modules = []
